--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=vgc-api
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/vgc-db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# JPA/Hibernate
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Security
+spring.security.user.name=admin
+spring.security.user.password=admin
